--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -13,7 +13,7 @@
 	{{/is}}
 	{{^is "author"}}
 		{{> widget-social}}
-		{{> widget-newsletter}}
+		{{> widget-sendgrid}}
 		{{> widget-recentpost}}
 		{{> widget-tagcloud}}
 	{{/is}}
